00-test/deploymentDB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      name: postgres-pod
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-srv
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
