00-test/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy: {}
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: gcr.io/n0ise-385214/webapp:0.01
        name: frontend
        imagePullPolicy: IfNotPresent
        resources: {}

  
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  type: LoadBalancer
  selector:
    app: webapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
