00-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: api.n0ise.io
    http:
      paths:
        - backend:
            serviceName: n0ise
            servicePort: 9999
  - host: n0ise.io
    http:
      paths:
        - backend:
            serviceName: webapp
            servicePort: 80
